crates/compiler/src/tests/e2e/good/0202_basic_bindings_and_print/main.gom
fn main() {
    let x: float32 = 1.0;
    println((x).to_string());
}
