crates/compiler/src/tests/e2e/bad/0062_closure_parameter_parse_error/main.gom
fn main() {
    let f = |: int32| 1;
    println(f(1).to_string());
}
